scotia-peru-aks/viya/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-data-mining-project-resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /dataMining/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMining/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining
    sas.com/admin: namespace
  name: sas-data-mining
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining
            port:
              number: 80
        path: /dataMining(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining
            port:
              number: 80
        path: /dataMining(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /dataMiningModels/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMiningModels/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-models
    sas.com/admin: namespace
  name: sas-data-mining-models
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-models
            port:
              number: 80
        path: /dataMiningModels(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-models
            port:
              number: 80
        path: /dataMiningModels(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /dataMiningProjectResources/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMiningProjectResources/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-project-resources
    sas.com/admin: namespace
  name: sas-data-mining-project-resources
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-project-resources
            port:
              number: 80
        path: /dataMiningProjectResources(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-project-resources
            port:
              number: 80
        path: /dataMiningProjectResources(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /dataMiningProjectSettings/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataMiningProjectSettings/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-project-settings
    sas.com/admin: namespace
  name: sas-data-mining-project-settings
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-project-settings
            port:
              number: 80
        path: /dataMiningProjectSettings(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-mining-project-settings
            port:
              number: 80
        path: /dataMiningProjectSettings(/|$)(.*)
        pathType: ImplementationSpecific
